# 2d-platformer-life

./: .gitignore  CMakeLists.txt  README.md
src/: GLOBALS.hpp  InputManager.cpp  InputManager.hpp  main.cpp  testing.cpp
